brought back show hide tags button on mobile. Fixed css so the button will not extend past screen on mobile. Changed some margins and made the button move to next line below the image title.

--- a/app/assets/stylesheets/questions-page.scss
+++ b/app/assets/stylesheets/questions-page.scss
@@ -143,7 +143,7 @@
 }
 
 .showhidebuttons {
-  float: right;
+  display: inline-block;
 
   .show-tag{
     display: none;
@@ -165,6 +165,7 @@
     margin-right: 1px;
     font-size: 13px;
     font-weight: 700;
+    display: inline-block;
     &:hover{
     background-color: #E43800;
     }
@@ -229,6 +230,7 @@
 }
 
 .share-image-title {
+  display: inline-block;
   color: #4a4a4a;
   font-weight: 600;
   font-size: 14px;
@@ -1165,15 +1167,13 @@
     }
   }
 
-  .tool-bar {
-    width: 100%;
-    height: 40px !important;
-    }
   .showhidebuttons {
-    margin-top: 5px !important;
-    position: relative;
-    left: 6px !important;
+    margin-top: 15px;
+    margin-left: 5px;
+    margin-bottom: 15px;
+    left: 20px !important;
   }
+
   .instructag {
     display: none;
   }
